# FileBase

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  LICENSE  README.md  SECURITY.md  cliff.toml  docker-compose.release.yml  docker-compose.yml  filebase-full-project-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  images.yml  release.yml
apps/api/: Cargo.toml
apps/api/src/: app.rs  config.rs  db.rs  error.rs  main.rs  middleware.rs  redis_client.rs  state.rs
apps/api/src/db/: mod.rs
apps/api/src/entities/: api_key.rs  file.rs  mod.rs  project.rs  storage_connection.rs  upload_log.rs  upload_preset.rs  upload_session.rs  user.rs  webhook.rs  webhook_delivery_log.rs
apps/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security_headers.rs
apps/api/src/routes/: api_keys.rs  auth.rs  files.rs  health.rs  mod.rs  projects.rs  setup.rs  storage_connections.rs  upload_presets.rs  uploads.rs  webhooks.rs
apps/api/src/services/: crypto.rs  jwt.rs  mod.rs  password.rs  storage_factory.rs  webhooks.rs
apps/dashboard/: package.json  tsconfig.tsbuildinfo
apps/dashboard/app/: layout.tsx  page.tsx  providers.tsx  styles.css
apps/dashboard/app/dashboard/: DashboardShell.tsx  layout.tsx  page.tsx
apps/dashboard/app/dashboard/api-keys/: ApiKeysPage.tsx  page.tsx
apps/dashboard/app/dashboard/files/: FilesPage.tsx  page.tsx
apps/dashboard/app/dashboard/presets/: PresetsPage.tsx  page.tsx
apps/dashboard/app/dashboard/projects/: ProjectsPage.tsx  page.tsx
apps/dashboard/app/dashboard/storage/: ConnectionForm.tsx  StorageConnectionsPage.tsx  page.tsx
apps/dashboard/app/dashboard/webhooks/: WebhooksPage.tsx
apps/dashboard/app/login/: LoginForm.tsx  page.tsx
apps/dashboard/app/onboarding/: Onboarding.tsx  page.tsx
apps/dashboard/app/onboarding/steps/: AdminStep.tsx  DoneStep.tsx  PresetStep.tsx  StorageConfigStep.tsx  StorageTypeStep.tsx
apps/dashboard/components/: Brand.tsx  PageUI.tsx  ThemeToggle.tsx
apps/dashboard/lib/: api.ts  auth.ts  config.ts  queries.ts
apps/docs/: README.md  package.json
apps/docs/content/guides/: 01-quick-start.md  02-docker-compose.md  03-first-run-onboarding.md  04-local-storage.md  05-ftp-storage.md  06-sftp-storage.md  07-api-keys.md  08-upload-presets.md  09-signed-uploads.md  10-sdks.md  11-troubleshooting.md  12-security.md
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: jobs.rs  lib.rs
crates/image-processing/: Cargo.toml
crates/image-processing/src/: lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260523_000001_create_core_tables.rs  m20260523_000002_add_upload_preset_storage_connection.rs  m20260524_000001_create_webhook_delivery_logs.rs  main.rs
crates/storage/: Cargo.toml
crates/storage-ftp/: Cargo.toml
crates/storage-ftp/src/: lib.rs
crates/storage-local/: Cargo.toml
crates/storage-local/src/: lib.rs
crates/storage-sftp/: Cargo.toml
crates/storage-sftp/src/: lib.rs
crates/storage/src/: lib.rs
docker/: api.Dockerfile  dashboard.Dockerfile  worker.Dockerfile
docs/: README.md
docs/adrs/: 0001-monorepo-structure.md
examples/nextjs-example/: README.md
examples/react-example/: README.md
examples/react-native-example/: README.md
scripts/: README.md  install.sh  integration-phase15.sh  load-upload.sh
