[workspace]
resolver = "2"
members = [
  "apps/api",
  "apps/worker",
  "crates/core",
  "crates/storage",
  "crates/storage-local",
  "crates/storage-ftp",
  "crates/storage-sftp",
  "crates/image-processing",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/filebase/filebase"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
