[workspace]
resolver = "2"
members = [
  "apps/api",
  "apps/worker",
  "crates/core",
  "crates/migration",
  "crates/storage",
  "crates/storage-local",
  "crates/storage-ftp",
  "crates/storage-sftp",
  "crates/image-processing",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/filebase/filebase"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
redis = { version = "0.27", features = ["tokio-comp"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
