[package]
name = "filebase-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
serde.workspace = true
sea-orm.workspace = true
redis.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
serde_json = "1"
filebase-core = { path = "../../crates/core" }
filebase-migration = { path = "../../crates/migration" }
