[package]
name = "filebase-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
dotenvy.workspace = true
serde.workspace = true
sea-orm.workspace = true
redis.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
serde_json.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
filebase-core = { path = "../../crates/core" }
filebase-image-processing = { path = "../../crates/image-processing" }
filebase-migration = { path = "../../crates/migration" }
filebase-storage = { path = "../../crates/storage" }
filebase-storage-local = { path = "../../crates/storage-local" }
filebase-storage-ftp = { path = "../../crates/storage-ftp" }
filebase-storage-sftp = { path = "../../crates/storage-sftp" }
