[package]
name = "filebase-image-processing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
filebase-core = { path = "../core" }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
