[package]
name = "filebase-migration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "filebase_migration"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
sea-orm-migration.workspace = true
tokio.workspace = true
