[package]
name = "filebase-storage-ftp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
filebase-storage = { path = "../storage" }
suppaftp = "6"
tokio = { workspace = true, features = ["rt"] }
