[package]
name = "filebase-storage-sftp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
filebase-storage = { path = "../storage" }
ssh2 = "0.9"
tokio = { workspace = true, features = ["rt"] }
